--- a/inc/2-owncloud.tex
+++ b/inc/2-owncloud.tex
@@ -8,28 +8,33 @@
 Облачные вычисления (<<облака>>, Cloud computing) "--- модель предоставления вычислительных ресурсов, охватывающая все, начиная от приложений и до центров обработки данных (ЦОД), через Интернет при условии оплаты за фактическое использование.
 
 Одной из первых, кто стал внедрять услугу облачных вычислений стала компания Amazon, в то время (2002~г.) она еще являлась книжным Интернет-магазином, который впоследствии перерос, благодаря этим внедрениям, в одну из мощнейших технологических компаний.
-Уже в 2006~г. был запущен проект под названием Computing Cloud (Amazon EC2), после этого в 2009~г. компания Google представила Google Apps.
+Уже в 2006~г. был запущен проект под названием Computing Cloud (Amazon EC2)\footnote{\url{https://aws.amazon.com/ru/ec2/}}, после этого в 2009~г. компания Google представила Google Apps\footnote{\url{https://apps.google.com/}}.
+
 После этих событий были сформированы общие понятия об облачных вычислениях, в частности выделены наиболее важные модели обслуживания и модели развертывания.
 
 Облачные вычисления являются следующим шагом в эволюции архитектуры построения информационных систем.
 Благодаря преимуществам данного подхода вполне очевидно, что многие информационные системы в ближайшее время переносятся или будут перенесены в облако.
 Процесс уже идет полным ходом и его игнорирование или недооценка может привести к поражению в конкурентной борьбе на рынке.
-В данном случае имеется в виду не только отставание ИТ или неоправданные затраты на него, но и отставание в развитии бизнеса компании, которая зависит от гибкости информационной инфраструктуры и скорости вывода новых сервисов и продуктов на рынок.
+В данном случае имеется в виду не только отставание информационных технологий или неоправданные затраты на него, но и отставание в развитии бизнеса компании, которая зависит от гибкости информационной инфраструктуры и скорости вывода новых сервисов и продуктов на рынок.
 
 Различают три основные модели обслуживания:
 \begin{enumerate}
-    \item программное обеспечение как услуга (Software-as-a-Service, SaaS);
-    \item платформа как услуга (Platform-as-a-Service, PaaS);
-    \item инфраструктура как услуга (Infrastructure-as-a-Service, IaaS).
+    \item программное обеспечение как услуга (Software as a Service, SaaS);
+    \item платформа как услуга (Platform as a Service, PaaS);
+    \item инфраструктура как услуга (Infrastructure as a Service, IaaS).
 \end{enumerate}
+
+Такие модели обслуживания как Container as a Service (CaaS) и Database as a Service (DaaS), являются по больше мере частными случаями IaaS и SaaS соответственно.
 
 SaaS "--- модель, при которой не требуется приобретать, устанавливать, обновлять и поддерживать ПО, эту задачу берет на себя поставщик услуги.
 Кроме того, осуществить регистрацию и использование облачных приложений можно немедленно, приложения и данные приложений доступны с любого устройства, подключенного к Интернету.
 При поломке устройства данные не теряются, они хранятся в облаке, пользователю, как правило, доступны локальные настройки конфигурации приложения.
-Примерами моделей SaaS могут служить: почтовая служба Gmail, Skype, CRM (система управления взаимоотношения с клиентами) и ERP (планирование ресурсов предприятия) системы и другие.
+
+Примерами модели SaaS могут служить: почтовая служба Gmail, Dropbox, Google Docs.
 
 PaaS "--- модель, при которой пользователю предоставляется возможность использования облачной инфраструктуры для размещения базового ПО.
 В таком случае конфигурирование программного обеспечения целиком ложится на пользователя, предоставляется только платформа для развертывания ПО.
+
 Примером модели PaaS является предоставление услуги развертывания собственного ПО в рамках облачной инфраструктуры.
 Например Heroku, OpenShift.
 
@@ -37,7 +42,14 @@ IaaS "--- модель, при которой пользователю, дост
 Потребитель обладает контролем над операционными системами, сетевыми сервисами.
 Данная модель подходит задачам, для которых характерно быстрое изменение нагрузки.
 Пользователю предоставляется виртуализированное окружение, как правило с <<чистой>> операционной системой, пригодной для развертывания любого приложения.
-Примеры: Digital Ocean, Microsoft Azure, Google App Engine и~т.д;
+
+Примеры: Digital Ocean, Microsoft Azure, Google Compute Engine (GCE), Amazon Web Services (AWS) и~т.д;
+
+\begin{figure}[ht]
+    \centering
+	\includegraphics[width=\linewidth]{iaas-paas-saas}
+	\caption{Представители различных моделей обслуживания}\label{pic:iaas-paas-saas}
+\end{figure}
 
 Модели развертывания облака можно разделить на четыре вида:
 \begin{enumerate}
@@ -47,7 +59,15 @@ IaaS "--- модель, при которой пользователю, дост
     \item гибридное облако (hybrid cloud).
 \end{enumerate}
 
-Частное облако предназначено для использования одной организацией, публичное "--- для широкой публики, общественное, как правило для сообщества или организации, гибридное облако состоит из двух или более различных облачных инфраструктур.
+Частное облако предназначено для использования одной организацией, как правило находится в собственности самой организации.
+Публичное облако предназначено для широкой публики, как правило находится в собственности сторонних организаций.
+Общественное, как правило для сообщества или организации, а гибридное облако состоит из двух или более различных облачных инфраструктур.
+
+\begin{figure}[ht]
+    \centering
+	\includegraphics[width=\linewidth]{clouds}
+	\caption{Различия между моделями развертывания облака}\label{pic:clouds}
+\end{figure}
 
 Основными преимуществами использования облачных технологий являются:
 \begin{itemize}
@@ -59,6 +79,7 @@ IaaS "--- модель, при которой пользователю, дост
 ownCloud "--- свободное веб-приложение, предназначенное для синхронизации данных между сервером и клиентами, как правило данными являются документы и медиаконтент.
 ownCloud является альтернативой таким облачным сервисам как Dropbox, Google Drive, Яндекс Диск, MEGA и др.
 Отличие состоит в том, что приложение можно развернуть на собственном сервере как для домашнего использования, так и для использования в организациях.
+
 Так как приложение распространяется бесплатно, имеет открытый исходный код\footnote{\url{https://github.com/owncloud/}} и периодически обрастает новыми функциями (планировщик задач, календарь, фотогалерея, просмотрщик документов, гибкая аутентификация пользователей и другие) проект обрел популярность как у пользователей, так и у Open-source разработчиков.
 
 Установка ownCloud происходит в несколько простых шагов.
@@ -85,6 +106,7 @@ ownCloud Server доступен для платформ Windows и Linux, ownCl
     \item В чем состоит отличие SaaS от PaaS и IaaS?
     \item В чем состоят преимущества ownCloud по сравнению с Dropbox или другими облачными хранилищами? Недостатки?
     \item Можно ли Skype можно отнести к модели SaaS, почему?
+    \item Почему одни организации предпочитают использовать в своей инфраструктуре частные облака, а другие "--- публичные?
 \end{enumerate}
 
 \clearpage
