Поправил размеры картинок

--- a/inc/b-appendix.tex
+++ b/inc/b-appendix.tex
@@ -8,69 +8,69 @@
 
 \begin{figure}[ht]
     \centering
-	\includegraphics[width=\linewidth]{Screenshot-15}
-	\includegraphics[width=\linewidth]{Screenshot-16}
+	\includegraphics[width=0.9\linewidth]{Screenshot-15}
+	\includegraphics[width=0.9\linewidth]{Screenshot-16}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
-	\includegraphics[width=\linewidth]{Screenshot-17}
-	\includegraphics[width=\linewidth]{Screenshot-18}
+	\includegraphics[width=0.9\linewidth]{Screenshot-17}
+	\includegraphics[width=0.9\linewidth]{Screenshot-18}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
-	\includegraphics[width=\linewidth]{Screenshot-19}
-	\includegraphics[width=\linewidth]{Screenshot-20}
+	\includegraphics[width=0.9\linewidth]{Screenshot-19}
+	\includegraphics[width=0.9\linewidth]{Screenshot-20}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
-	\includegraphics[width=\linewidth]{Screenshot-21}
-	\includegraphics[width=\linewidth]{Screenshot-22}
+	\includegraphics[width=0.9\linewidth]{Screenshot-21}
+	\includegraphics[width=0.9\linewidth]{Screenshot-22}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
-	\includegraphics[width=\linewidth]{Screenshot-23}
-	\includegraphics[width=\linewidth]{Screenshot-24}
+	\includegraphics[width=0.9\linewidth]{Screenshot-23}
+	\includegraphics[width=0.9\linewidth]{Screenshot-24}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
-	\includegraphics[width=\linewidth]{Screenshot-25}
-	\includegraphics[width=\linewidth]{Screenshot-26}
+	\includegraphics[width=0.9\linewidth]{Screenshot-25}
+	\includegraphics[width=0.9\linewidth]{Screenshot-26}
 \end{figure}
 
 
 \begin{figure}[ht]
     \centering
-	\includegraphics[width=\linewidth]{Screenshot-27}
-	\includegraphics[width=\linewidth]{Screenshot-28}
+	\includegraphics[width=0.9\linewidth]{Screenshot-27}
+	\includegraphics[width=0.9\linewidth]{Screenshot-28}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
-	\includegraphics[width=\linewidth]{Screenshot-29}
-	\includegraphics[width=\linewidth]{Screenshot-30}
+	\includegraphics[width=0.9\linewidth]{Screenshot-29}
+	\includegraphics[width=0.9\linewidth]{Screenshot-30}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
-	\includegraphics[width=\linewidth]{Screenshot-31}
-	\includegraphics[width=\linewidth]{Screenshot-32}
+	\includegraphics[width=0.9\linewidth]{Screenshot-31}
+	\includegraphics[width=0.9\linewidth]{Screenshot-32}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
-	\includegraphics[width=\linewidth]{Screenshot-33}
-	\includegraphics[width=\linewidth]{Screenshot-34}
+	\includegraphics[width=0.9\linewidth]{Screenshot-33}
+	\includegraphics[width=0.9\linewidth]{Screenshot-34}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
-	\includegraphics[width=\linewidth]{Screenshot-35}
-	\includegraphics[width=\linewidth]{Screenshot-36}
+	\includegraphics[width=0.9\linewidth]{Screenshot-35}
+	\includegraphics[width=0.9\linewidth]{Screenshot-36}
 \end{figure}
 
 \clearpage
