--- a/inc/a-appendix.tex
+++ b/inc/a-appendix.tex
@@ -2,8 +2,8 @@
 
 \begin{figure}[ht]
     \centering
-	\includegraphics[width=\linewidth]{Screenshot}
-	\includegraphics[width=0.95\linewidth]{Screenshot-1}
+	\includegraphics[width=0.9\linewidth]{Screenshot}
+	\includegraphics[width=0.9\linewidth]{Screenshot-1}
 \end{figure}
 
 \begin{figure}[ht]
