--- a/inc/e-appendix.tex
+++ b/inc/e-appendix.tex
@@ -14,7 +14,7 @@
 Создадим новое приложение в разделе <<Personal Apps>> (рис.~\ref{pic:add_app}).
 \begin{figure}[ht]
     \centering
-	\includegraphics[width=0.6\linewidth]{createapp}
+	\includegraphics[width=0.7\linewidth]{createapp}
     \caption{Список созданных приложений в Heroku}\label{pic:add_app}
 \end{figure}
 
@@ -62,6 +62,9 @@ $ git push heroku master
 \end{lstlisting}
 
 Переходим на страницу приложения\footnote{\url{https://helloivt.herokuapp.com/}, где <<helloivt>> "--- это имя приложения, заданное в веб-интерфейсе Heroku} и проверяем, страница должна выводить надпись <<Hello from Python!>> (рис.~\ref{pic:hellopy}).
+
+\clearpage
+
 \begin{figure}[ht]
     \centering
 	\includegraphics[width=\linewidth]{hello}
@@ -78,11 +81,11 @@ $ git commit -am "First commit!"
 $ git push heroku master
 \end{lstlisting}
 
-Обновляем страницу с приложением (рис.~\ref{pic:helloivt}).
+Обновляем страницу с приложением (рис.~\ref{pic:newhello}).
 \begin{figure}[ht]
     \centering
 	\includegraphics[width=\linewidth]{newhello}
-    \caption{Изменения в приложении вступили в силу}\label{pic:helloivt}
+    \caption{Изменения в приложении вступили в силу}\label{pic:newhello}
 \end{figure}
 
 \clearpage
