Добавил картинки к ЛР№3

--- a/inc/3-heroku.tex
+++ b/inc/3-heroku.tex
@@ -7,7 +7,6 @@
 За время существования информационных технологий создавались и изменялись подходы к построению информационных систем.
 Первой моделью информационной системы была монолитная архитектура.
 В данной модели на одном компьютере работали и приложения и база данных (БД), а пользователи сидели у <<тонких>> терминалов которые отображали информацию с компьютера.
-
 У данной архитектуры было большое количество недостатков, поэтому впоследствии ее сменила более перспективная клиент-серверная архитектура.
 В этом случае на компьютере располагался выделенный сервер баз данных, а пользователи с <<толстых клиентов>> разгружали сервер БД.
 
@@ -15,7 +14,13 @@
 В современном информационном мире большинство приложений выполнено именно в многоуровневой архитектуре.
 Она подразумевает развертывание всей ИТ-инфраструктуры на территории заказчика.
 
-Организация процесса разработки программного обеспечения также претерпела много изменений с течением времени.
+\begin{figure}[ht]
+    \centering
+	\includegraphics[width=\linewidth]{jee}
+	\caption{Пример многоуровневой архитектуры}\label{pic:jee}
+\end{figure}
+
+Организация процесса разработки ПО также претерпела много изменений с течением времени.
 Одна из самых старых методологий "--- каскадная (водопадная), подразумевает последовательное прохождение стадий, каждая из которых должна завершиться полностью до начала следующей.
 В этой модели легко управлять проектом.
 Благодаря ее жесткости, разработка проходит быстро, стоимость и срок заранее определены.
@@ -25,11 +30,16 @@
 К ее недостаткам относят то, что из-за отсутствия конкретных формулировок результатов сложно оценить трудозатраты и стоимость, требуемые на разработку.
 Экстремальное программирование (XP) является одним из наиболее известных применений гибкой модели на практике.
 
+\begin{figure}[ht]
+    \centering
+	\includegraphics[width=\linewidth]{agile-waterfall}
+	\caption{Каскадная и Agile-методологии}\label{pic:agile-waterfall}
+\end{figure}
+
 В последнее время все большую популярность приобретает именно Agile-методология, в которой необходимо на каждой итерации разработки проводить развертку новой версии ПО, гораздо удобнее это делать с помощью PaaS-решений, таких как Heroku.
 
 Heroku является облачной PaaS-платформой, поддерживающей ряд языков программирования, таких как Java, Node.js, Scala, Clojure, Python и PHP.
 В Heroku можно легко развертывать (деплоить) проекты, не беспокоясь о развертывании собственной инфраструктуры для одного приложения.
-
 Приложения, работающие на Heroku, используют также DNS-сервер Heroku.
 Для каждого приложения выделяется несколько независимых виртуальных процессов, которые называются <<dynos>>.
 Они распределены по специальной виртуальной сетке <<dynos grid>>, которая состоит из нескольких серверов.
