Рамки для изображений без подписи

--- a/inc/a-appendix.tex
+++ b/inc/a-appendix.tex
@@ -2,43 +2,43 @@
 
 \begin{figure}[ht]
     \centering
-	\includegraphics[width=0.9\linewidth]{Screenshot}
-	\includegraphics[width=0.9\linewidth]{Screenshot-1}
+    \fbox{\includegraphics[width=0.9\linewidth]{Screenshot}}
+    \fbox{\includegraphics[width=0.9\linewidth]{Screenshot-1}}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
-	\includegraphics[width=\linewidth]{Screenshot-2}
-	\includegraphics[width=\linewidth]{Screenshot-3}
+    \fbox{\includegraphics[width=\linewidth]{Screenshot-2}}
+    \fbox{\includegraphics[width=\linewidth]{Screenshot-3}}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
-	\includegraphics[width=\linewidth]{Screenshot-4}
-	\includegraphics[width=\linewidth]{Screenshot-5}
+    \fbox{\includegraphics[width=\linewidth]{Screenshot-4}}
+    \fbox{\includegraphics[width=\linewidth]{Screenshot-5}}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
-	\includegraphics[width=\linewidth]{Screenshot-6}
-	\includegraphics[width=\linewidth]{Screenshot-7}
+    \fbox{\includegraphics[width=\linewidth]{Screenshot-6}}
+    \fbox{\includegraphics[width=\linewidth]{Screenshot-7}}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
-	\includegraphics[width=\linewidth]{Screenshot-8}
-	\includegraphics[width=\linewidth]{Screenshot-9}
+    \fbox{\includegraphics[width=\linewidth]{Screenshot-8}}
+    \fbox{\includegraphics[width=\linewidth]{Screenshot-9}}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
-	\includegraphics[width=\linewidth]{Screenshot-10}
-	\includegraphics[width=\linewidth]{Screenshot-11}
+    \fbox{\includegraphics[width=\linewidth]{Screenshot-10}}
+    \fbox{\includegraphics[width=\linewidth]{Screenshot-11}}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
-	\includegraphics[width=\linewidth]{Screenshot-12}
+    \fbox{\includegraphics[width=\linewidth]{Screenshot-12}}
 \end{figure}
 
 \clearpage
