--- a/inc/b-appendix.tex
+++ b/inc/b-appendix.tex
@@ -2,75 +2,75 @@
 
 \begin{figure}[ht]
     \centering
-	\includegraphics[width=0.8\linewidth]{Screenshot-13}
-	\includegraphics[width=0.8\linewidth]{Screenshot-14}
+    \fbox{\includegraphics[width=0.75\linewidth]{Screenshot-13}}
+    \fbox{\includegraphics[width=0.75\linewidth]{Screenshot-14}}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
-	\includegraphics[width=0.9\linewidth]{Screenshot-15}
-	\includegraphics[width=0.9\linewidth]{Screenshot-16}
+    \fbox{\includegraphics[width=0.9\linewidth]{Screenshot-15}}
+    \fbox{\includegraphics[width=0.9\linewidth]{Screenshot-16}}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
-	\includegraphics[width=0.9\linewidth]{Screenshot-17}
-	\includegraphics[width=0.9\linewidth]{Screenshot-18}
+    \fbox{\includegraphics[width=0.9\linewidth]{Screenshot-17}}
+    \fbox{\includegraphics[width=0.9\linewidth]{Screenshot-18}}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
-	\includegraphics[width=0.9\linewidth]{Screenshot-19}
-	\includegraphics[width=0.9\linewidth]{Screenshot-20}
+    \fbox{\includegraphics[width=0.9\linewidth]{Screenshot-19}}
+    \fbox{\includegraphics[width=0.9\linewidth]{Screenshot-20}}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
-	\includegraphics[width=0.9\linewidth]{Screenshot-21}
-	\includegraphics[width=0.9\linewidth]{Screenshot-22}
+    \fbox{\includegraphics[width=0.9\linewidth]{Screenshot-21}}
+    \fbox{\includegraphics[width=0.9\linewidth]{Screenshot-22}}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
-	\includegraphics[width=0.9\linewidth]{Screenshot-23}
-	\includegraphics[width=0.9\linewidth]{Screenshot-24}
+    \fbox{\includegraphics[width=0.9\linewidth]{Screenshot-23}}
+    \fbox{\includegraphics[width=0.9\linewidth]{Screenshot-24}}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
-	\includegraphics[width=0.9\linewidth]{Screenshot-25}
-	\includegraphics[width=0.9\linewidth]{Screenshot-26}
+    \fbox{\includegraphics[width=0.9\linewidth]{Screenshot-25}}
+    \fbox{\includegraphics[width=0.9\linewidth]{Screenshot-26}}
 \end{figure}
 
 
 \begin{figure}[ht]
     \centering
-	\includegraphics[width=0.9\linewidth]{Screenshot-27}
-	\includegraphics[width=0.9\linewidth]{Screenshot-28}
+    \fbox{\includegraphics[width=0.9\linewidth]{Screenshot-27}}
+    \fbox{\includegraphics[width=0.9\linewidth]{Screenshot-28}}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
-	\includegraphics[width=0.9\linewidth]{Screenshot-29}
-	\includegraphics[width=0.9\linewidth]{Screenshot-30}
+    \fbox{\includegraphics[width=0.9\linewidth]{Screenshot-29}}
+    \fbox{\includegraphics[width=0.9\linewidth]{Screenshot-30}}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
-	\includegraphics[width=0.9\linewidth]{Screenshot-31}
-	\includegraphics[width=0.9\linewidth]{Screenshot-32}
+    \fbox{\includegraphics[width=0.9\linewidth]{Screenshot-31}}
+    \fbox{\includegraphics[width=0.9\linewidth]{Screenshot-32}}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
-	\includegraphics[width=0.9\linewidth]{Screenshot-33}
-	\includegraphics[width=0.9\linewidth]{Screenshot-34}
+    \fbox{\includegraphics[width=0.9\linewidth]{Screenshot-33}}
+    \fbox{\includegraphics[width=0.9\linewidth]{Screenshot-34}}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
-	\includegraphics[width=0.9\linewidth]{Screenshot-35}
-	\includegraphics[width=0.9\linewidth]{Screenshot-36}
+    \fbox{\includegraphics[width=0.9\linewidth]{Screenshot-35}}
+    \fbox{\includegraphics[width=0.9\linewidth]{Screenshot-36}}
 \end{figure}
 
 \clearpage
