--- a/inc/d-appendix.tex
+++ b/inc/d-appendix.tex
@@ -2,19 +2,19 @@
 
 \begin{figure}[ht]
     \centering
-	\includegraphics[width=\linewidth]{Screenshot-client}
+    \fbox{\includegraphics[width=\linewidth]{Screenshot-client}}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=\linewidth]{Screenshot-1-client}
-	\includegraphics[width=\linewidth]{Screenshot-2-client}
+    \fbox{\includegraphics[width=\linewidth]{Screenshot-1-client}}
+    \fbox{\includegraphics[width=\linewidth]{Screenshot-2-client}}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=\linewidth]{Screenshot-3-client}
-	\includegraphics[width=\linewidth]{Screenshot-4-client}
+    \fbox{\includegraphics[width=\linewidth]{Screenshot-3-client}}
+    \fbox{\includegraphics[width=\linewidth]{Screenshot-4-client}}
 \end{figure}
 
 \clearpage
