--- a/inc/a-appendix.tex
+++ b/inc/a-appendix.tex
@@ -1,9 +1,8 @@
-\section{Создание виртуальной машины в Oracle VM VirtualBox} \label{pril:a}
+\section{Создание виртуальной машины в VirtualBox} \label{pril:a}
 
 \begin{figure}[ht]
     \centering
-    \fbox{\includegraphics[width=0.9\linewidth]{Screenshot}}
-    \fbox{\includegraphics[width=0.9\linewidth]{Screenshot-1}}
+    \fbox{\includegraphics[width=\linewidth]{Screenshot-1}}
 \end{figure}
 
 \begin{figure}[ht]
