--- a/inc/2-owncloud.tex
+++ b/inc/2-owncloud.tex
@@ -30,20 +30,19 @@ SaaS "--- модель, при которой не требуется приоб
 Кроме того, осуществить регистрацию и использование облачных приложений можно немедленно, приложения и данные приложений доступны с любого устройства, подключенного к Интернету.
 При поломке устройства данные не теряются, они хранятся в облаке, пользователю, как правило, доступны локальные настройки конфигурации приложения.
 
-Примерами модели SaaS могут служить: почтовая служба Gmail, Dropbox, Google Docs.
+Примерами модели SaaS могут служить: почтовая служба Gmail, Dropbox, Google Docs, Microsoft Office 365.
 
 PaaS "--- модель, при которой пользователю предоставляется возможность использования облачной инфраструктуры для размещения базового ПО.
 В таком случае конфигурирование программного обеспечения целиком ложится на пользователя, предоставляется только платформа для развертывания ПО.
 
-Примером модели PaaS является предоставление услуги развертывания собственного ПО в рамках облачной инфраструктуры.
-Например Heroku, OpenShift.
+Примером модели PaaS является предоставление услуги развертывания собственного ПО в рамках облачной инфраструктуры, например Heroku, OpenShift.
 
 IaaS "--- модель, при которой пользователю, доступно полное управление облаком в рамках операционной системы.
 Потребитель обладает контролем над операционными системами, сетевыми сервисами.
 Данная модель подходит задачам, для которых характерно быстрое изменение нагрузки.
 Пользователю предоставляется виртуализированное окружение, как правило с <<чистой>> операционной системой, пригодной для развертывания любого приложения.
 
-Примеры: Digital Ocean, Microsoft Azure, Google Compute Engine (GCE), Amazon Web Services (AWS) и~т.д;
+Примеры: Digital Ocean, Microsoft Azure, Google Compute Engine (GCE), Amazon Web Services (AWS).
 
 \begin{figure}[ht]
     \centering
@@ -59,9 +58,9 @@ IaaS "--- модель, при которой пользователю, дост
     \item гибридное облако (hybrid cloud).
 \end{enumerate}
 
-Частное облако предназначено для использования одной организацией, как правило находится в собственности самой организации.
+Частное облако предназначено для использования одной организацией, как правило оно находится в собственности самой организации.
 Публичное облако предназначено для широкой публики, как правило находится в собственности сторонних организаций.
-Общественное, как правило для сообщества или организации, а гибридное облако состоит из двух или более различных облачных инфраструктур.
+Общественное, как правило предназначено для сообщества или организации, а гибридное облако состоит из двух или более различных облачных инфраструктур.
 
 \begin{figure}[ht]
     \centering
@@ -85,7 +84,7 @@ ownCloud является альтернативой таким облачным
 \subsection{Порядок выполнения работы}
 
 Выполнять работу рекомендуется группами студентов по 3-5 человек.
-В качестве сервера может использоваться виртуальная машина с установленным дистрибутивом Debian, ранее установленная в лабораторной работе №1.
+В качестве сервера может использоваться виртуальная машина с ранее установленным (в ЛР№1) дистрибутивом Debian.
 Виртуальная машина должна иметь доступ в сеть Интернет для скачивания нужных пакетов.
 
 \begin{enumerate}
