--- a/inc/3-heroku.tex
+++ b/inc/3-heroku.tex
@@ -1,7 +1,7 @@
 \section[ЛР №3. Модель обслуживания PaaS, Heroku]{Лабораторная работа №3. \\
 Модель обслуживания PaaS на примере деплоя приложения в Heroku}
 
-\textbf{Цель работы:} ознакомиться с моделью гибкой (agile) разработки программного обеспечения, развернуть приложение на Heroku, ознакомиться с системой контроля версий Git.
+\textbf{Цель работы:} ознакомиться с моделью гибкой разработки программного обеспечения, развернуть приложение на Heroku, ознакомиться с системой контроля версий Git.
 
 \subsection{Краткие сведения о методологиях разработки ПО}
 За время существования информационных технологий создавались и изменялись подходы к построению информационных систем.
