--- a/inc/4-openstack.tex
+++ b/inc/4-openstack.tex
@@ -1,7 +1,7 @@
 \section[ЛР №4. Модель обслуживания IaaS, OpenStack]{Лабораторная работа №4. \\
 Модель обслуживания IaaS на примере создания инстанса в OpenStack}
 
-\textbf{Цель работы:} ознакомиться с веб-интерфейсом OpenStack, научиться настраивать сеть, создавать инстансы и управлять ими в OpenStack, понять преимущества использования IaaS-решений по сравнению с PaaS.
+\textbf{Цель работы:} ознакомиться с веб-интерфейсом OpenStack, научиться настраивать сеть, создавать инстансы и управлять ими в OpenStack, ознакомиться с преимуществами использования IaaS-решений по сравнению с PaaS.
 
 \subsection{Краткие сведения об OpenStack}
 
