--- a/inc/c-appendix.tex
+++ b/inc/c-appendix.tex
@@ -27,14 +27,8 @@ New password for the MySQL "root" user: toor-mysql
 Repeat password for the MySQL "root" user: toor-mysql
 \end{lstlisting}
 
-После того, как установщик скачал и установил все необходимые пакеты, можно проверить корректность установки (рис.~\ref{pic:first-own}), зайдя по адресу \texttt{http://192.168.0.102/owncloud/}, \\
+После того, как установщик скачал и установил все необходимые пакеты, можно проверить корректность установки, зайдя по адресу \texttt{http://192.168.0.102/owncloud/}, \\
 где \texttt{192.168.0.102} "--- IP-адрес сервера (виртуальной машины).
-
-\begin{figure}[ht]
-    \centering
-    \includegraphics[width=0.7\linewidth]{Screenshot-owncloud}
-    \caption{Первый запуск приложения}\label{pic:first-own}
-\end{figure}
 
 Приложение предлагает использовать базу данных SQLite по умолчанию, мы же будем использовать MySQL:
 \begin{lstlisting}
