Правки от mc_pa4chan&krabs

--- a/inc/2-owncloud.tex
+++ b/inc/2-owncloud.tex
@@ -5,7 +5,7 @@
 
 \subsection{Теоретические основы облачных вычислений}
 
-Облачные вычисления (<<облака>>, Cloud computing) "--- модель предоставления вычислительных ресурсов, охватывающая все, начиная от приложений и до центров обработки данных (ЦОД), через Интернет при условии оплаты за фактическое использование.
+Облачные вычисления (<<облака>>, Cloud computing) "--- модель предоставления вычислительных ресурсов, охватывающая все, от приложений и до центров обработки данных (ЦОД), через Интернет при условии оплаты за фактическое использование.
 
 Одной из первых, кто стал внедрять услугу облачных вычислений стала компания Amazon, в то время (2002~г.) она еще являлась книжным Интернет-магазином, который впоследствии перерос, благодаря этим внедрениям, в одну из мощнейших технологических компаний.
 Уже в 2006~г. был запущен проект под названием Computing Cloud (Amazon EC2)\footnote{\url{https://aws.amazon.com/ru/ec2/}}, после этого в 2009~г. компания Google представила Google Apps\footnote{\url{https://apps.google.com/}}.
@@ -100,7 +100,7 @@ ownCloud является альтернативой таким облачным
 \begin{enumerate}
     \item Каковы основные преимущества использования облачных технологий?
     \item В чем состоит отличие SaaS от PaaS и IaaS?
-    \item В чем состоят преимущества ownCloud по сравнению с Dropbox или другими облачными хранилищами? Недостатки?
+    \item В чем преимущества ownCloud по сравнению с Dropbox или другими облачными хранилищами? Недостатки?
     \item Можно ли Skype можно отнести к модели SaaS, почему?
     \item Почему одни организации предпочитают использовать в своей инфраструктуре частные облака, а другие "--- публичные?
 \end{enumerate}
