--- a/inc/e-appendix.tex
+++ b/inc/e-appendix.tex
@@ -7,7 +7,7 @@
     \caption{Регистрация в Heroku}\label{pic:heroku_reg}
 \end{figure}
 
-После регистрации, на указанный почтовый ящик приходит письмо с подтверждением регистрации, необходимо перейти по ссылке из письма и подтвердить регистрацию.
+После регистрации, на указанный почтовый ящик приходит письмо с подтверждением, необходимо перейти по ссылке из письма и подтвердить регистрацию.
 
 После подтверждения регистрации можно войти в свою учетную запись и ознакомиться с интерфейсом платформы.
 
