--- a/inc/f-appendix.tex
+++ b/inc/f-appendix.tex
@@ -152,10 +152,10 @@ $ ssh ubuntu@8.43.86.56 -i Downloads/student123.pem
 
 Установим для примера веб-сервер Nginx и разместим для общего доступа HTML-страничку.
 \begin{lstlisting}
-# apt-get update && apt-get install nginx
-# echo "<h1>Hello, this instance created by OpenStack.</h1>" > \
+$ sudo apt update && sudo apt install nginx
+$ sudo echo "<h1>Hello, this instance created by OpenStack.</h1>" > \
 > /var/www/html/index.nginx-debian.html
-# echo "<h3>Computer Science and Engineering, SevSU</h3>" >> \
+$ sudo echo "<h3>Computer Science and Engineering, SevSU</h3>" >> \
 > /var/www/html/index.nginx-debian.html
 \end{lstlisting}
 
