Уменьшен размер файла на 1.5M за счет уменьшения изображений

--- a/inc/title.tex
+++ b/inc/title.tex
@@ -20,7 +20,7 @@
 
 \Large{Е.Н.~Мащенко}\footnote{\texttt{elmachenko@mail.ru}} % Автор 2
 
-\Large{\today}\footnote{Дата последней правки \url{https://github.com/Amet13/metod-oblaka}} % Дата
+\Large{\today}\footnote{Последня версия документа: \url{https://github.com/Amet13/metod-oblaka}} % Дата
 
 \end{center}
 
