Исправление некоторых ссылок + поправка README

--- a/inc/2-owncloud.tex
+++ b/inc/2-owncloud.tex
@@ -8,7 +8,7 @@
 Облачные вычисления (<<облака>>, Cloud computing) "--- модель предоставления вычислительных ресурсов, охватывающая все, от приложений и до центров обработки данных (ЦОД), через Интернет при условии оплаты за фактическое использование.
 
 Одной из первых, кто стал внедрять услугу облачных вычислений стала компания Amazon, в то время (2002~г.) она еще являлась книжным Интернет-магазином, который впоследствии перерос, благодаря этим внедрениям, в одну из мощнейших технологических компаний.
-Уже в 2006~г. был запущен проект под названием Computing Cloud (Amazon EC2)\footnote{\url{https://aws.amazon.com/ru/ec2/}}, после этого в 2009~г. компания Google представила Google Apps\footnote{\url{https://apps.google.com/}}.
+Уже в 2006~г. был запущен проект под названием Computing Cloud (Amazon EC2)\footnote{\url{https://aws.amazon.com/ru/ec2/}}, после этого в 2009~г. компания Google представила Google Apps\footnote{\url{https://gsuite.google.com/}}.
 
 После этих событий были сформированы общие понятия об облачных вычислениях, в частности выделены наиболее важные модели обслуживания и модели развертывания.
 
