--- a/inc/f-appendix.tex
+++ b/inc/f-appendix.tex
@@ -5,7 +5,7 @@
 Для регистрации на сервисе TryStack необходимо иметь аккаунт в Facebook и вступить в группу TryStack\footnote{\url{https://www.facebook.com/groups/269238013145112}}.
 
 После отправки заявки на вступление в закрытую группу, возможно, придется подождать несколько дней для подтверждения заявки.
-Когда заявка подтверждена, то можно авторизоваться в панели\footnote{\url{https://x86.trystack.org/dashboard/auth/login/?next=/dashboard/}} TryStack с помощью аккаунта Facebook.
+Когда заявка подтверждена, то можно авторизоваться в панели\footnote{\url{https://x86.trystack.org/dashboard/auth/login/}} TryStack с помощью аккаунта Facebook.
 
 После авторизации можно посмотреть интерфейс управления OpenStack (рис.~\ref{pic:ui}).
 \begin{figure}[ht]
