--- a/inc/2-owncloud.tex
+++ b/inc/2-owncloud.tex
@@ -92,7 +92,7 @@ ownCloud является альтернативой таким облачным
     \item На хост-машине или на другом компьютере сети скачать\footnote{\url{https://owncloud.org/install/}} и установить ownCloud Client;
     \item Подключить ownCloud Client к серверу во время первого запуска клиента, а также синхронизировать все данные с сервера\footnote{Пример настройки ownCloud Client представлен в прил.~\ref{pril:d}};
     \item Проверить работу синхронизации данных между клиентом и сервером (создать, удалить, переместить файл или каталог);
-    \item Предоставить публичную ссылку на файл или каталог и проверить его доступность в пределах локальной сети;
+    \item Предоставить публичную ссылку на файл или каталог и проверить ее доступность в пределах локальной сети;
     \item Ознакомиться с дополнительными возможностями ownCloud.
 \end{enumerate}
 
@@ -100,8 +100,7 @@ ownCloud является альтернативой таким облачным
 \begin{enumerate}
     \item Каковы основные преимущества использования облачных технологий?
     \item В чем состоит отличие SaaS от PaaS и IaaS?
-    \item В чем преимущества ownCloud по сравнению с Dropbox или другими облачными хранилищами? Недостатки?
-    \item Можно ли Skype можно отнести к модели SaaS, почему?
+    \item Какими преимуществами и недостатками обладает ownCloud по сравнению с Dropbox или другими облачными хранилищами?
     \item Почему одни организации предпочитают использовать в своей инфраструктуре частные облака, а другие "--- публичные?
 \end{enumerate}
 
