--- a/inc/c-appendix.tex
+++ b/inc/c-appendix.tex
@@ -1,6 +1,6 @@
 \section{Установка ownCloud Server в Debian GNU/Linux} \label{pril:c}
 
-После успешного входа в систему, в первую очередь необходимо получить права суперпользователя\footnote{Пароль пользователя не отображается на экране во время набора}:
+После успешного входа в систему, в первую очередь необходимо получить права суперпользователя\footnote{Пароль пользователя не отображается на экране во время набора} и добавить пользователя student в группу sudo:
 \begin{lstlisting}
 $ su -
 Password: toor
@@ -30,7 +30,7 @@ Repeat password for the MySQL "root" user: toor-mysql
 После того, как установщик скачал и установил все необходимые пакеты, можно проверить корректность установки, зайдя по адресу \texttt{http://192.168.0.102/owncloud/}, \\
 где \texttt{192.168.0.102} "--- IP-адрес сервера (виртуальной машины).
 
-Приложение предлагает использовать базу данных SQLite\footnote{При использовании SQLite вместо MySQL, следующий шаг можно пропустить} по умолчанию, мы будем использовать MySQL:
+Приложение предлагает использовать базу данных SQLite\footnote{При использовании SQLite вместо MySQL, следующий шаг можно пропустить} по умолчанию, мы для примера будем использовать MySQL:
 \begin{lstlisting}
 # mysql -uroot -ptoor-mysql
 mysql> CREATE DATABASE owncloud-DB;
