--- a/inc/e-appendix.tex
+++ b/inc/e-appendix.tex
@@ -18,7 +18,7 @@
     \caption{Список созданных приложений в Heroku}\label{pic:add_app}
 \end{figure}
 
-Пусть имя приложения будет <<helloivt>> (рис.~\ref{pic:helloivt}).
+Пусть название приложения будет <<helloivt>> (рис.~\ref{pic:helloivt}).
 \begin{figure}[ht]
     \centering
     \includegraphics[width=\linewidth]{helloivt}
