--- a/inc/f-appendix.tex
+++ b/inc/f-appendix.tex
@@ -7,17 +7,17 @@
 После отправки заявки на вступление в закрытую группу, возможно, придется подождать несколько дней для подтверждения заявки.
 Когда заявка подтверждена, то можно авторизоваться в панели\footnote{\url{https://x86.trystack.org/dashboard/auth/login/}} TryStack с помощью аккаунта Facebook.
 
-После авторизации можно посмотреть интерфейс управления OpenStack (рис.~\ref{pic:ui}).
+После авторизации можно ознакомиться с интерфейсом OpenStack (рис.~\ref{pic:ui}).
 \begin{figure}[ht]
     \centering
     \includegraphics[width=\linewidth]{4_ui}
     \caption{Интерфейс управления OpenStack}\label{pic:ui}
 \end{figure}
 
-OpenStack позволяет создавать множество инстансов из готовых шаблонов ОС, также существует возможность создавать свои образы.
+OpenStack позволяет создавать множество инстансов (виртуальных машин) из готовых шаблонов ОС, также существует возможность создавать свои образы.
 Доступные шаблоны ОС можно увидеть в разделе \textbf{Compute - Images}.
 
-Для настройки OpenStack, в первую очередь, необходимо настроить сеть.
+Для использования OpenStack, в первую очередь, необходимо настроить сеть.
 
 Создадим в разделе \textbf{Network - Networks - Create Network} (рис.~\ref{pic:net}):
 \begin{itemize}
