--- a/inc/3-heroku.tex
+++ b/inc/3-heroku.tex
@@ -16,7 +16,7 @@
 
 \begin{figure}[ht]
     \centering
-	\includegraphics[width=\linewidth]{jee}
+	\includegraphics[width=0.8\linewidth]{jee}
 	\caption{Пример многоуровневой архитектуры}\label{pic:jee}
 \end{figure}
 
